MPL/test/MplPasses/TypeChecker/cases/typecheck/positive/21.mpl
fun v21 :: -> A=
    -> v21()
