MPL/test/MplPasses/TypeChecker/cases/typecheck/negative/1.mpl
fun nf1 :: A -> B =
    a -> a
